# Portfolio

./: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1731934128581-e98039725e1b6.mjs
.claude/: settings.local.json
backend/: .env.example  .gitignore  __init__.py  example_agent.py  graph.py  langgraph.json  pyproject.toml  server.py  setup.py
backend/edges/: edge_builder.py  middleware_jump_edge.py  model_to_model.py  model_to_tools.py  tools_to_model.py
backend/middlewares/: recursion_guard_middleware.py  subagent_middleware.py  todo_middleware.py  tour_middleware.py
backend/nodes/: model_nodes.py  node_builder.py
backend/nodes/utils/: binding.py  executors.py  message_utils.py  output_handler.py
backend/state_machine/: __init__.py  section_flow_middleware.py
backend/state_machine/core/: __init__.py  manager.py
backend/state_machine/tools/: __init__.py  change_section.py
backend/state_machine/types/: __init__.py  config_types.py
backend/state_machine/utils/: __init__.py  state_helpers.py
backend/structured_output/: __init__.py  error_handling.py  strategy_detection.py
backend/utils/: handler_factory.py  message_helpers.py  model_call_chain.py  schema_helpers.py  tool_call_chain.py
public/: index.html
src/: App.css  App.js  App.tsx  Certificate.css  Routes.jsx  ScrollAnimation.css  burger.css  contact.css  crad.css  index.css  main.tsx  social.css
src/animation/: EmailSending.json
src/components/: Certificates.jsx  (+11 more)
(+61 files in other folders)
